Stock-Trader-Trade-History-Deployment.yaml
# Source: traderlite/templates/trade-history.yaml
#       Copyright 2017 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmetrader-trade-history
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acmetrader-trade-history

  template:
    metadata:
      labels:
        app: acmetrader-trade-history
        solution: acmetrader-lite-trader
    spec:
      containers:
      - name: trade-history
        image: "clouddragons/trade-history-python:2.0"
        ports:
          - containerPort: 5000

        imagePullPolicy: Always
